--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^8.1.1",
     "nodemailer": "^6.9.13",
     "path": "^0.12.7",
+    "socket.io": "^4.7.5",
     "web-push": "^3.6.5"
   },
   "devDependencies": {
